# pdf

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  main.tsx  modes.ts  overlay.ts  store.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/ai/: agent.ts  stamps.ts  tools.ts
apps/desktop/src/components/: AiPanel.tsx  EmptyState.tsx  OverlayLayer.tsx  PageCanvas.tsx  RightPanel.tsx  StatusBar.tsx  ThumbnailsSidebar.tsx  Toolbar.tsx  Viewer.tsx
apps/desktop/src/lib/: openFile.ts
docs/: RELEASE.md
services/converter/: Cargo.toml  Dockerfile  README.md
services/converter/src/: main.rs
