[package]
name = "converter"
description = "MyFreePDF conversion + OCR microservice"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "converter"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
