[package]
name = "pdfcheap"
description = "PDF.cheap — cross-platform PDF editor desktop shell"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

# The library exposes `run()`; the binary is a thin launcher. This split is what
# lets the same codebase target desktop and (later) mobile.
[lib]
name = "pdfcheap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
